<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstQuestionActivity"
    android:gravity="center">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcomeInfirstQuestion"
            android:layout_gravity="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="140dp"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layoutDirection="rtl">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/typeOfJob"
                />
            <CheckBox
                android:id="@+id/checkbox1_inq1activity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/standing"/>
            <CheckBox
                android:id="@+id/checkbox2inq1activity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sitting"
                />
            <TextView
                android:id="@+id/hinttv1q1"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/explain_sit_stand"/>


        </LinearLayout>
        <Button
            android:id="@+id/btn_next_inq1activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_gravity="center"
            android:background="@drawable/bg_nextbutton"
            android:textColor="@color/white"
            android:text="@string/next"
            />
    </LinearLayout>

</RelativeLayout>